<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_find"
          android:title="@string/action_search"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_open"
          android:icon="@drawable/ic_open"
          android:title="@string/action_open"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_new"
          android:icon="@drawable/ic_new"
          android:title="@string/action_new"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_save"
          android:icon="@drawable/ic_save"
          android:title="@string/action_save"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_close"
          android:icon="@drawable/ic_close"
          android:title="@string/action_close"
          android:showAsAction="ifRoom" />
    
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
